--- a/FEVHelper/Basics.xaml
+++ b/FEVHelper/Basics.xaml
@@ -29,14 +29,14 @@
             <!-- Description-->
             <TextBlock FontSize="13" Margin="0,5,0,0" Text="Description"></TextBlock>
             <TextBox Name="DescriptionText" Padding="2"></TextBox>
-            
+
             <!-- Status and revision-->
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="2*" />
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                         
+
                 <StackPanel Margin="0,0,10,0" Grid.Column="0">
                     <TextBlock FontSize="13" Text="Status"></TextBlock>
                     <TextBox Background="LightGray" Padding="2" Grid.Column="0"></TextBox>
@@ -64,21 +64,22 @@
             <!-- Checkboxes-->
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="25*"/>
+                    <ColumnDefinition Width="63*"/>
+                    <ColumnDefinition Width="88*"/>
                 </Grid.ColumnDefinitions>
 
                 <!-- Column 1-->
-                <StackPanel Grid.Column="0" Margin="0,0,10,0">
+                <StackPanel Grid.Column="0" Margin="0,0,10,0" Grid.ColumnSpan="2">
                     <CheckBox Checked="Checkbox_Checked" x:Name="WeldCheckBox" Content="Welddsds"/>
                     <CheckBox Checked="Checkbox_Checked" x:Name="AssemblyCheckBox" Content="Assembly"/>
                     <CheckBox Checked="Checkbox_Checked" x:Name="PlasmaCheckBox" Content="Plasma"/>
                     <CheckBox Checked="Checkbox_Checked" x:Name="LaserCheckBox" Content="Laser"/>
                     <CheckBox Checked="Checkbox_Checked" x:Name="PurchaseCheckBox" Content="Purchase"/>
                 </StackPanel>
-                
+
                 <!-- Column 2-->
-                <StackPanel Grid.Column="1">
+                <StackPanel Grid.Column="2">
                     <CheckBox Checked="Checkbox_Checked" x:Name="LatheCheckBox" Content="Lathe"/>
                     <CheckBox Checked="Checkbox_Checked" x:Name="DrillCheckBox" Content="Drill"/>
                     <CheckBox Checked="Checkbox_Checked" x:Name="FoldCheckBox" Content="Fold"/>
@@ -126,7 +127,7 @@
 
             <!-- XML-->
             <TextBlock FontSize="13" FontWeight="Bold" Margin="0,10,0,0" Text="XML"></TextBlock>
-            
+
             <!-- XML Buttons-->
             <Grid Margin="0,10,0,0">
 
