--- a/FEVHelper/MainWindow.xaml
+++ b/FEVHelper/MainWindow.xaml
@@ -8,6 +8,10 @@
         xmlns:cmd="clr-namespace:GalaSoft.MvvmLight.Command;assembly=GalaSoft.MvvmLight.Platform"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    
+    <Window.Resources>
+        <local:MultiConverter x:Key="Converter"/>
+    </Window.Resources>
 
     <DockPanel>
         <!--Menu top toolbar view-->
@@ -91,22 +95,48 @@
             <Grid Grid.Column="1" Margin="5,5,5,5">
 
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="2*"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
 
-                <StackPanel Grid.Row="0" Margin="0,0,0,0" >
+                <Grid>
+                    
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    
+                    <StackPanel Grid.Row="0" Margin="0,0,0,0" x:Name="Panel" >
                     <TextBlock Text="Choose types of quantities" FontWeight="Bold" TextAlignment="Center" FontSize="16" Margin="0,0,0,10"/>
-                    <CheckBox Checked="Checkbox_Checked" x:Name="QuantityMeasurements" Content="Measurements"/>
-                    <CheckBox Checked="Checkbox_Checked" x:Name="AssemblyCheckBox" Content="String"/>
-                    <CheckBox Checked="Checkbox_Checked" x:Name="PlasmaCheckBox" Content="Constant"/>
-                    <Button Margin="0,5,0,0"
+                    <CheckBox x:Name="QuantityMeasurements" Content="Measurements"/>
+                    <CheckBox x:Name="QuantityString" Content="String"/>
+                    <CheckBox x:Name="QuantityConstant" Content="Constant"/>
+                    <!--<Button Margin="0,5,0,0"
                         Content="Read Values" 
-                        Name="Read"
+                        x:Name="Read"
                         Command="{Binding ReadXMLFileCommand}"
-                        />
-                </StackPanel>
-                
+                        CommandParameter="{Binding ElementName=QuantityMeasurements}"
+                        />-->
+                        <Button Content="Read Values" Command="{Binding ReadXMLFileCommand}">
+                            <Button.CommandParameter>
+                                <MultiBinding Converter="{StaticResource Converter}">
+                                    <Binding Path="IsChecked" ElementName="QuantityMeasurements"/>
+                                    <Binding Path="IsChecked" ElementName="QuantityString"/>
+                                    <Binding Path="IsChecked" ElementName="QuantityConstant"/>
+                                </MultiBinding>
+                            </Button.CommandParameter>
+                        </Button>
+                    </StackPanel>
+                    <ListView Grid.Row="1" Height="auto" Name="ReadItems" ItemsSource="{Binding Stringi}">
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn Header="ID" DisplayMemberBinding="{Binding ID}"/>
+                                <GridViewColumn Header="Description" DisplayMemberBinding="{Binding Description}"/>
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
+                </Grid>
+
 
                 <StackPanel Grid.Row="1">
                     <TextBlock Text="Save to CSV" FontWeight="Bold" TextAlignment="Center" FontSize="16" />
